--- a/Secret_Santa.Rmd
+++ b/Secret_Santa.Rmd
@@ -2,8 +2,9 @@
 title: 'A Diaz, Guzman, & Co. Xmas: Secret Santa 2018'
 author: "David A. Diaz"
 output:
-  html_document: default
   pdf_document: default
+  word_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
