re-vamp for xmas 2019

--- a/Secret_Santa.Rmd
+++ b/Secret_Santa.Rmd
@@ -1,14 +1,18 @@
 ---
-title: 'A Diaz, Guzman, & Co. Xmas: Secret Santa 2018'
-author: "David A. Diaz"
 output:
-  pdf_document: default
-  word_document: default
   html_document: default
+params:
+    year: 2019
+    limit: 15
+    seed: 1251
+title: "Diaz, Guzman, & Co. Secret Santa `r params$year`"
+author: "David A. Diaz"
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE,
+					  message = FALSE,
+					  warning = FALSE)
 
 library(tidyverse)
 library(lubridate)
@@ -16,142 +20,59 @@ library(scales)
 library(readxl)
 library(knitr)
 library(kableExtra)
-
-curr_year <- year(Sys.Date())
-year_limit <- 15
-
+library(here)
 
 ```
 
 # Introduction
 
-Hello and welcome familia Diaz/Guzman (+ all others)! We are excited to continue our Secret Santa tradition for `r curr_year`. Let's go over some quick guidelines and then delve in!
+Hello and welcome familia Diaz/Guzman (+ all others)! We are excited to continue our Secret Santa tradition for `r params$year`. Let"s go over some quick guidelines and then delve in!
 
 * As always, everyone is randomly matched to another human (or to a Cindy, a dog, or a cat).
-* Your mission is to buy a thoughtful gift for your Secret Santa to be given at our Christmas celebration on either December 24th or 25th.
-* The dollar limit for this year's big event is **$`r year_limit`**. 
+* Your mission is to buy a thoughtful gift for your Secret Santa to be given at our Christmas celebration on **December 24th at midnight**.
+* The dollar limit for this year"s big event is **$`r params$limit`**. 
 
-```{r, echo=FALSE, fig.align='center'}
+```{r fami-pic, fig.align="center"}
 
-# Credit to http://www.theanalyticslab.nl/2016/12/25/christmas-tree-with-ggplot/ for the Christmas tree code #
-
-rm(list = ls())
-library(ggplot2)
-
-# create data
-x <- c(8,7,6,7,6,5,6,5,4,5,4,3,4,3,2,3,2,1,0.5,0.1)
-
-dat1 <- data.frame(x1 = 1:length(x), x2 = x)
-dat2 <- data.frame(x1 = 1:length(x), x2 = -x)
-dat1$xvar <- dat2$xvar <- NA
-dat1$yvar <- dat2$yvar <- NA
-dat1$siz <- dat2$siz <- NA
-dat1$col <- dat2$col <- NA
-
-# set threshold for christmas balls
-dec_threshold = -0.5
-
-# create random places, sizes and colors for christmas balls
-set.seed(2512)
-for (row in 1:nrow(dat1)){
-  
-  if (rnorm(1) > dec_threshold){
-    
-    dat1$xvar[row] <- row 
-    dat1$yvar[row] <- sample(1:dat1$x2[row]-1,1)
-    dat1$siz[row] <- runif(1,0.5,1.5)
-    dat1$col[row] <- sample(1:5, 1)
-  }
-  
-  if (rnorm(1) > dec_threshold){
-    
-    dat2$xvar[row] <- row 
-    dat2$yvar[row] <- sample(1:dat2$x2[row],1)
-    dat2$siz[row] <- runif(1,0.5,1.5)
-    dat2$col[row] <- sample(1:5, 1)
-  }
-}
-
-# plot the christmas tree  
-ggplot() + 
-  geom_bar(data = dat1, aes(x=x1, y=x2),stat = "identity", fill = '#31a354', na.rm=TRUE) +
-  geom_bar(data = dat2, aes(x=x1, y=x2),stat = "identity", fill = '#31a354', na.rm=TRUE) +
-  geom_point(data = dat1,aes(x = xvar, y = yvar, size = siz, colour = as.factor(col)), na.rm=TRUE) +
-  geom_point(data = dat2,aes(x = xvar, y = yvar, size = siz, colour = as.factor(col)), na.rm=TRUE) +
-  coord_flip() + theme_void()+ theme(legend.position="none",
-                                        axis.title.x=element_blank(),
-                                        axis.text.x=element_blank(),
-                                        axis.ticks.x=element_blank(),
-                                        axis.title.y=element_blank(),
-                                        axis.text.y=element_blank(),
-                                        axis.ticks.y=element_blank()) 
+knitr::include_graphics(here::here("family-pic.png"))
 
 ```
 
 # The Participants
 
-Let's see who is participating this year: 
+```{r participants}
 
-```{r, echo=FALSE, results='asis'}
+# read in list of names
+fam <- 
+  readr::read_csv(here::here("xmas_list.csv")) %>% 
+  dplyr::arrange(name)
 
-# Read in list of names
-fam <- as.tibble(read_excel("./xmas_list.xlsx"))
-
-# Let's arrange in alphabetical order
-fam <- fam %>% select(Name, everything()) %>% arrange(Name)
-
-# Display participants
-fam %>% kable(align='l') %>% kable_styling(bootstrap_options = "striped")
-
-```
-
-# The Matching
-
-An easy way to do the matching in **R** is to pick all the participants in random order and assign them to give a gift to the following person in the list. This helps to not have any self-matches that might occur in a "draw-a-name-out-of-a-hat" approach, though it does prevent any cross-gifting, i.e., no two people *i* and *j* can be each other's Santa. I think that's actually a nice feature - let's mix it up!
-
-I'll show an example of how it works, but will use IDs instead of names to keep it generic. 
-
-```{r,  results='asis'}
-
-famID <- fam %>%
-       # Assign ID to each person
-       mutate(ID = sample(seq(100,200), length(fam$Name), replace=FALSE)) %>% 
-       select(ID) %>%
-       # Randomly draw every ID 
-       mutate(ID = sample(ID)) %>%     
-      # Pick the next ID in list as their partner
-       mutate(Partner_ID = lag(ID))  
-
-# Assign remaining partner to first person in list
-famID$Partner_ID[1] <- famID$ID[nrow(famID)]                               
-
-# Show table
-famID %>% kable(align='l') %>% kable_styling(bootstrap_options = "striped")
-
+# display participants
+fam %>% 
+  dplyr::select(name, dplyr::everything()) %>%
+  dplyr::rename(Participant = name) %>%
+  knitr::kable(align="l", col.names = NULL) %>% 
+  kableExtra::kable_styling(bootstrap_options = "striped")
 
 ```
 
-# The Final Results
+# The Matches
 
-The code that generates the final Secret Santa matches is shown below. Note that this will generate a new partner each time it is run - so don't try it at home and expect the partners to be the same as in the final run!
+```{r matches}
 
-```{r, echo=TRUE}
+set.seed(params$seed)
 
-# Set seed for reproducing matches - good luck guessing my number :)
-# set.seed()
-
-fam <- fam %>%
-       select(Name) %>%
-       mutate(Name = sample(Name)) %>%     
-       mutate(Partner = lag(Name))  
+fam <- 
+  fam %>% 
+  dplyr::mutate(name = sample(name)) %>%     
+  dplyr::mutate(partner = dplyr::lag(name))  
        
-fam$Partner[1] <- fam$Name[nrow(fam)]  
+fam$partner[1] <- fam$name[nrow(fam)]  
 
-```
-
-```{r, results='hide', echo=FALSE}
-
-fam %>% arrange(Name) %>% kable(align='l') %>% kable_styling(bootstrap_options = "striped")
+fam %>% 
+  dplyr::arrange(name) %>% 
+  knitr::kable(align="l") %>% 
+  kableExtra::kable_styling(bootstrap_options = "striped")
 
 ```
 
