update seed and add option to omit matches

--- a/template/secret_santa.Rmd
+++ b/template/secret_santa.Rmd
@@ -4,6 +4,7 @@ output:
 params:
     year: 2019
     limit: 15
+    run_matches: yes
 title: "Diaz, Guzman, & Co. Secret Santa `r params$year`"
 author: "David A. Diaz"
 ---
@@ -59,7 +60,9 @@ fam %>%
 
 ```{r matches}
 
-set.seed(params$year)
+if(tolower(params$run_matches) == "yes"){
+
+set.seed(params$year + 7)
 
 fam <- 
   fam %>% 
@@ -72,6 +75,12 @@ fam %>%
   dplyr::arrange(name) %>% 
   knitr::kable(align="l") %>% 
   kableExtra::kable_styling(bootstrap_options = "striped")
+
+} else if(tolower(params$run_matches) == "no"){
+
+  print("To be determined...")
+
+}
 
 ```
 
