--- a/template/secret_santa.Rmd
+++ b/template/secret_santa.Rmd
@@ -30,7 +30,7 @@ Hello and welcome familia Diaz/Guzman (+ all others)! We are excited to continue
 
 * As always, everyone is randomly matched to another human (or to a Cindy, a dog, or a cat).
 * Your mission is to buy a thoughtful gift for your Secret Santa to be given at our Christmas celebration on **December 24th at midnight**.
-* The dollar limit for this year"s big event is **$`r params$limit`**. 
+* The dollar limit for this year's big event is **$`r params$limit`**. 
 
 ```{r fami-pic, fig.align="center", out.width="80%"}
 
